fixed assessment instruction gap

--- a/app/assets/stylesheet/content.css
+++ b/app/assets/stylesheet/content.css
@@ -618,7 +618,7 @@ transform: rotate(-90deg);
 .final-assessment .question-page .question{background-color: #FFF;padding: 5px 15px 5px 15px;}
 .final-assessment .question-page .question li:last-child{line-height: 1.3em; }
 .final-assessment .question-page .question-counter{font-size: 1.6em;margin-bottom: 3px;color:#0A4166;line-height: 1.6em;margin-right: 10px;}
-.final-assessment .question-page .instruction{color:#EE3124;padding:0;background:none;background-color:#FFF;font-size:1em;margin-bottom: 8px;}
+.final-assessment .question-page .instruction{color:#EE3124;padding:0;background:none;background-color:#FFF;font-size:1em;margin-bottom: 8px;margin-top: -20px;}
 .final-assessment .question-page .options{margin-top:0}
 
 .final-assessment .next-back-container{display:table;padding-left: 15px;padding-right:0;margin-top: 7px;}
